--- a/exercices/style.css
+++ b/exercices/style.css
@@ -15,3 +15,11 @@ p::before{
     font-size: 1.2em;
     color: red;
 }
+
+body {
+    counter-reset: exemple;
+}
+h2::before {
+    counter-increment: exemple;
+    content: "exemple" counter(exemple) ":";
+}
